--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
     "react": "^19.1.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
